--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "car-sharing",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Arch819.github.io/car-sharing/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,8 +11,11 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
